app1/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel1
  namespace: default
  labels:
    app: laravel1
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8181
  selector:
    app: laravel1
