app1/deploy/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: laravel-app-1
  namespace: gw
spec:
  hosts:
  - "kworker"
  gateways:
  - laravel-app-1
  http:
  - match:
    - uri:
        prefix: /app1
    route:
    - destination:
        host: laravel1.default.svc.cluster.local
        port:
          number: 80
